5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2496.log
== TEST (2019-05-09 16:09:57) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:10:11) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:10:12) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:10:13) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- EXECUTION TIME:
0.219347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:10:45) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:01) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:04) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:12) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:25) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(a + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:32) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a=int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	if ( a == -1):
		print(a + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:52) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a =int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
		print(a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:12:34) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- EXECUTION TIME:
0.119691
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:35) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:12:35) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- EXECUTION TIME:
0.123847
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:35) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:36) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:36) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:36) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print(a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print(a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:12:45) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- EXECUTION TIME:
0.21354
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:46) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:46) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:09) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print ( a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print ( a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:10) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print ( a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print ( a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:13:40) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- EXECUTION TIME:
0.141304
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:41) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:13:41) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	if ( a == -1):
	print( a + 1 + 1)
	
-- EXECUTION TIME:
0.195692
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 11
    print( a + 1 + 1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:04) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:14:06) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- EXECUTION TIME:
0.163801
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:14:07) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- EXECUTION TIME:
0.15517
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:14:08) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- EXECUTION TIME:
0.169089
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:08) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:11) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:16) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:22) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:40) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:48) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:55) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( a + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:19:34) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( soma + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:19:48) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( soma + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:19:56) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( soma + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:11) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + total
	total = soma + a
	
	if ( a == -1):
		print( soma + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:34) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:42) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:49) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( total + 1 + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:28) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
		if ( a == -1):
			print( total + 1 + 1)
	
-- ERROR:
File "XXXX", line 11
    if ( a == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:40) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a == -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( total + 1 + 1)

-- ERROR:
File "XXXX", line 11
    if ( a == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:47) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a == -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a != -1):
		print( total + 1 + 1)

-- ERROR:
File "XXXX", line 11
    if ( a == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:22:06) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	a = soma + a
	total = soma + a
	
	if ( a == -1):
		print( total + 1 + 1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:40:41) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- EXECUTION TIME:
0.235968
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:40:42) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- EXECUTION TIME:
0.135172
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:25:21) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:45:29) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:45:49) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:45:58) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:46:32) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total += 2)

-- ERROR:
File "XXXX", line 12
    print( total += 2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:46:45) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:46:54) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:46:59) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:49:37) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
#variavel acumuladora
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:52:26) 
-- CODE:
a=int(input("digite um numero: "))

soma = a
#variavel acumuladora
total = 0

while ( a != -1 ):
	a = int(input("digite um numero: "))
	soma = soma + a
	total = a + soma
	
	if ( a == -1):
		print( total + 1 + 1)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
